Ingress/ingress.yaml
# ==========================================
# 1. INGRESS DÀNH CHO FRONTEND
# ==========================================
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jobportal-frontend-ingress
  namespace: jobportal
spec:
  ingressClassName: nginx
  rules:
  - host: k8s-onpremise.chausu.name.vn
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jobportal-frontend-service
            port:
              number: 80

---
# ==========================================
# 2. INGRESS DÀNH CHO BACKEND (KÈM CORS)
# ==========================================
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jobportal-backend-ingress
  namespace: jobportal
  annotations:
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "https://k8s-onpremise.chausu.name.vn"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, PUT, POST, DELETE, PATCH, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-headers: "DNT,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    nginx.ingress.kubernetes.io/cors-max-age: "1728000"
spec:
  ingressClassName: nginx
  rules:
  - host: api.chausu.name.vn
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jobportal-backend-service
            port:
              number: 8080
