Ingress/monitoring-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitoring-ingress
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
  # 1. Truy cập Web giao diện biểu đồ Grafana
  - host: grafana.chausu.name.vn
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: devopseduvn-grafana
            port:
              number: 80

  # 2. Truy cập Web bảng chỉ số Prometheus
  - host: prometheus.chausu.name.vn
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: devopseduvn-kube-prometheu-prometheus
            port:
              number: 9090
